Update menu structure for better representation and rename files

--- a/Tutorial_Puzzle.html
+++ b/Tutorial_Puzzle.html
@@ -2749,7 +2749,7 @@
         }
 
         function returnToTutorialMenu() {
-            window.location.href = 'Tutorial_Menu.html';
+            window.location.href = 'tutorial_menu.html';
         }
     </script>
 </body>
