--- a/tutorial_interactive_b_plus_tree.html
+++ b/tutorial_interactive_b_plus_tree.html
@@ -1795,7 +1795,7 @@
         }
 
         function returnToTutorialMenu() {
-            window.location.href = 'Tutorial_Menu.html';
+            window.location.href = 'tutorial_menu.html';
         }
 
         // Add Enter key support
